--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" >
 </head>
 <body>
+   <h4 class="title-t">Our Products</h4>
+   <p class="chapter-a">Baked Fresh
+    Every Morning</p>
 </body>
 </html>
