--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
    <h4 class="title-t">Our Products</h4>
-   <p class="chapter-a">Baked Fresh
-    Every Morning</p>
+   <h3>Baked Fresh
+    Every Morning
+   </h3>
+<img class="home-bread" src="home bread.jpg" alt="home made bread">
+<img class=cupcake-c  src="cupcake.jpg" alt="cupcake" >
+<img class="bread-a" src="bread.jpg" alt="shop bread">   
+<img class="biscuit-b" src="biscuit.jpg" alt="biscuit">
+<img class="brioeche-r" src="brioche.jpg" alt="brioche">
+<form>
+    <div>
+        <button type="button" onclick="alert('wish you a good day')">Explore</button>
+    </div>
+</form>
 </body>
 </html>
